kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiii-project-deployment
  namespace: kiii
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kiii-project
  template:
    metadata:
      labels:
        app: kiii-project
    spec:
      containers:
        - name: kiii-project
          image: stefanbatandjiev/kiii-project:latest
          ports:
            - containerPort: 4000
